# ascii-snake-cpp

./: CMakeLists.txt  README.md
Application/Source/Inc/: App.h  Enum.h  Snake.h
Application/Source/Src/: App.cpp  Snake.cpp
Framework/Source/Inc/: ActorManager.h  ConsoleManager.h  Error.h  IApp.h  IGame.h  IManager.h  InputManager.h  Result.h
Framework/Source/Src/: ActorManager.cpp  AppHost.cpp  ConsoleManager.cpp  IApp.cpp  InputManager.cpp
Game/: CMakeLists.txt
Game/Source/Inc/: Food.h  FoodView.h  Game.h  GameApp.h  GameContext.h  GameController.h  GameOverView.h  GameRenderer.h  GameStateView.h  LevelInfo.h  ReadyView.h  Snake.h
Game/Source/Src/: Food.cpp  FoodView.cpp  Game.cpp  GameApp.cpp  GameContext.cpp  GameController.cpp  GameOverView.cpp  GameRenderer.cpp  GameStateView.cpp  LevelInfo.cpp  Main.cpp  ReadyView.cpp  Snake.cpp
Source/Inc/: ConsoleManager.h  GameApp.h  GameContext.h  IActor.h  InputManager.h  RenderManager.h  Snake.h
Source/Src/: ConsoleManager.cpp  GameApp.cpp  GameContext.cpp  GameTimer.cpp  InputManager.cpp  Main.cpp  RenderManager.cpp  Snake.cpp
